--- a/TechSolutions-program/Views/Seguimiento/Index.cshtml
+++ b/TechSolutions-program/Views/Seguimiento/Index.cshtml
@@ -1,3 +1,3 @@
-@model TechSolutions_program.Controllers.DashboardViewModel
+@model TechSolutions_program.Models.DashboardViewModel
 
 <h1>Dashboard de Control</h1>
